--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -56,7 +56,7 @@
                         <img src="/static/assets/img/store-location.svg" alt="Symbol, Lösung vor Ort">
                     </div>
                     <div class="text-wrapper">
-                        <h3 data-i18n="primary.feature5">Vorort Lösung</h3>
+                        <h3 data-i18n="primary.feature5">Carbon-optik schilder bei uns erhältlich</h3>
                     </div>
                 </div>
             </div>
@@ -110,11 +110,11 @@
                             <img src="/static/assets/img/check.svg" alt="Check mit Kreis">
                         </div>
                         <div class="text-wrapper">
-                            <p data-i18n="service.common.point3">Auch für gewerbliche Kunden </p>
+                            <p data-i18n="service.registration.point5">Mit Kfz schildern und Grüner Feinstaubplakette</p>
                         </div>
                     </div>
                 </div>
-                <a href="{{ url_for('core.checklist') }}#collapseOne" class="btn-primary" data-i18n="service.registration.cta">Zur
+                <a href="{{ url_for('core.register') }}#collapseOne" class="btn-primary" data-i18n="service.registration.cta">Zur
                     Anmeldung</a>
                 <img class="deco" src="/static/assets/img/stripped-circle-deco.png"
                     alt="Dekorativer Kreis mit Streifen">
@@ -144,11 +144,11 @@
                             <img src="/static/assets/img/check.svg" alt="Check mit Kreis">
                         </div>
                         <div class="text-wrapper">
-                            <p data-i18n="service.common.point3">Auch für gewerbliche Kunden </p>
+                            <p data-i18n="service.common.point3">Automatische meldung an kfz Versicherung und Zollamt</p>
                         </div>
                     </div>
                 </div>
-                <a href="{{ url_for('core.checklist') }}#collapseEight" class="btn-primary" data-i18n="service.deregistration.cta">Zur
+                <a href="{{ url_for('core.deregister') }}#collapseEight" class="btn-primary" data-i18n="service.deregistration.cta">Zur
                     Abmeldung</a>
             </div>
 
@@ -160,7 +160,7 @@
                             <img src="/static/assets/img/check.svg" alt="Check mit Kreis">
                         </div>
                         <div class="text-wrapper">
-                            <p data-i18n="service.common.point1">Ohne Termin, jederzeit verfügbar</p>
+                            <p data-i18n="service.export.point1">Ohne Termin, jederzeit verfügbar</p>
                         </div>
                     </div>
                     <div class="bullet-point">
@@ -168,7 +168,7 @@
                             <img src="/static/assets/img/check.svg" alt="Check mit Kreis">
                         </div>
                         <div class="text-wrapper">
-                            <p data-i18n="service.common.point2">Bundesweit möglich</p>
+                            <p data-i18n="service.export.point2">Bundesweit möglich</p>
                         </div>
                     </div>
                     <div class="bullet-point">
@@ -176,7 +176,7 @@
                             <img src="/static/assets/img/check.svg" alt="Check mit Kreis">
                         </div>
                         <div class="text-wrapper">
-                            <p data-i18n="service.common.point3">Auch für gewerbliche Kunden </p>
+                            <p data-i18n="service.export.point3">Auch für gewerbliche Kunden </p>
                         </div>
                     </div>
                 </div>
@@ -192,7 +192,7 @@
                             <img src="/static/assets/img/check.svg" alt="Check mit Kreis">
                         </div>
                         <div class="text-wrapper">
-                            <p data-i18n="service.common.point1">Ohne Termin, jederzeit verfügbar</p>
+                            <p data-i18n="service.temporary.point1">Inklusive Kurzzeit Versicherung</p>
                         </div>
                     </div>
                     <div class="bullet-point">
@@ -200,7 +200,7 @@
                             <img src="/static/assets/img/check.svg" alt="Check mit Kreis">
                         </div>
                         <div class="text-wrapper">
-                            <p data-i18n="service.common.point2">Bundesweit möglich</p>
+                            <p data-i18n="service.temporary.point2">Mit internationaler Versicherungskarte</p>
                         </div>
                     </div>
                     <div class="bullet-point">
@@ -208,7 +208,7 @@
                             <img src="/static/assets/img/check.svg" alt="Check mit Kreis">
                         </div>
                         <div class="text-wrapper">
-                            <p data-i18n="service.common.point3">Auch für gewerbliche Kunden </p>
+                            <p data-i18n="service.temporary.point3">Bestellung per telefon möglich</p>
                         </div>
                     </div>
                 </div>
@@ -224,7 +224,7 @@
                             <img src="/static/assets/img/check.svg" alt="Check mit Kreis">
                         </div>
                         <div class="text-wrapper">
-                            <p data-i18n="service.common.point1">Ohne Termin, jederzeit verfügbar</p>
+                            <p data-i18n="service.advice.point1">24/7 Hotline</p>
                         </div>
                     </div>
                     <div class="bullet-point">
@@ -232,7 +232,7 @@
                             <img src="/static/assets/img/check.svg" alt="Check mit Kreis">
                         </div>
                         <div class="text-wrapper">
-                            <p data-i18n="service.common.point2">Bundesweit möglich</p>
+                            <p data-i18n="service.advice.point2">Über 15 Jahre Erfahrung</p>
                         </div>
                     </div>
                     <div class="bullet-point">
@@ -240,10 +240,10 @@
                             <img src="/static/assets/img/check.svg" alt="Check mit Kreis">
                         </div>
                         <div class="text-wrapper">
-                            <p data-i18n="service.common.point3">Auch für gewerbliche Kunden </p>
+                            <p data-i18n="service.advice.point3">Beratung für spezielle fälle</p>
                         </div>
                     </div>
-                    <div class="bullet-point">
+                   <div class="bullet-point">
                         <div class="icon-wrapper">
                             <img src="/static/assets/img/check.svg" alt="Check mit Kreis">
                         </div>
