--- a/app/templates/overview.html
+++ b/app/templates/overview.html
@@ -66,6 +66,7 @@
                         <li><a class="dropdown-item"
                                 href="{{ url_for('locations.oberhausen') }}">Oberhausen-Rheinhausen</a></li>
                         <li><a class="dropdown-item" href="{{ url_for('locations.schwetzingen') }}">Schwetzingen</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('locations.Dossenheim') }}">Dossenheim</a></li>
                     </ul>
                 </div>
             </div>
