--- a/app/templates/wiesloch.html
+++ b/app/templates/wiesloch.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="btn-wrapper">
                     <a href="mailto:info@kfzzulassungsexpress.de" class="btn-blue">E-mail</a>
-                    <a href="#checklist" class="btn-outline" data-i18n="locations.kronau.hero.checklist">Checkliste</a>
+                    <a href="#checklist" class="btn-outline" data-i18n="locations.common.checklist">Checkliste</a>
                     <a href="https://wa.me/4915778789899" class="btn-outline" target="_blank">WhatsApp</a>
                 </div>
             </div>
@@ -50,7 +50,7 @@
 
 <div class="steps-section">
     <div class="content-wrapper">
-        <h2 data-i18n="locations.kronau.steps.title">Vorgehensweise</h2>
+        <h2 data-i18n="locations.common.steps_title">Vorgehensweise</h2>
         <div class="items">
             <div class="item">
                 <div class="animation-wrapper">
@@ -58,10 +58,10 @@
                         class="animation" speed="1" style="width: 150px; height: 150px;" loop autoplay></lottie-player>
                 </div>
                 <p>
-                    <span data-i18n="locations.kronau.steps.items.0">Bringen Sie alle notwendigen Dokumente für Ihr
+                    <span data-i18n="locations.common.step1">Bringen Sie alle notwendigen Dokumente für Ihr
                         Anliegen (z. B. Zulassung, Abmeldung) und das entsprechende</span> <a
                         href="/static/assets/pdf/auftragsformular.pdf" target="_blank"
-                        data-i18n="locations.kronau.steps.items.1">Auftragsformular mit.</a>
+                        data-i18n="locations.common.step1_link">Auftragsformular mit.</a>
                 </p>
             </div>
 
@@ -70,7 +70,7 @@
                     <lottie-player src="/static/assets/lottifiles/file-with-clip.json" background="transparent"
                         class="animation" speed="1" style="width: 150px; height: 150px;" loop autoplay></lottie-player>
                 </div>
-                <p data-i18n="locations.kronau.steps.items.2">
+                <p data-i18n="locations.common.step2">
                     Besuchen Sie eine unserer Annahmestellen und übergeben Sie die Unterlagen.
                 </p>
             </div>
@@ -80,7 +80,7 @@
                     <lottie-player src="/static/assets/lottifiles/purple-house.json" background="transparent" class="animation"
                         speed="1" style="width: 200px; height: 150px; margin-top: 5px" loop autoplay></lottie-player>
                 </div>
-                <p data-i18n="locations.kronau.steps.items.3">
+                <p data-i18n="locations.common.step3">
                     Wir kümmern uns um die Formalitäten und informieren Sie, sobald der Vorgang abgeschlossen ist.
                 </p>
             </div>
