--- a/app/templates/oestringen.html
+++ b/app/templates/oestringen.html
@@ -100,7 +100,7 @@
     </div>
 </div>
 
-{% include 'checklist-section.html' %}
+{% include 'faq-section-full.html' %}
 
 {% include 'reviews-section.html' %}
 
