--- a/app/templates/overview.html
+++ b/app/templates/overview.html
@@ -106,7 +106,7 @@
     </div>
 </div>
 
-{% include 'checklist-section.html' %}
+{% include 'faq-section-full.html' %}
 
 {% include 'reviews-section.html' %}
 
