--- a/app/templates/schwetzingen.html
+++ b/app/templates/schwetzingen.html
@@ -102,7 +102,7 @@
     </div>
 </div>
 
-{% include 'checklist-section.html' %}
+{% include 'faq-section-full.html' %}
 
 {% include 'reviews-section.html' %}
 
