Added About Us page.

--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -49,6 +49,7 @@
                             <a href="{{ url_for('services.deregister') }}" data-i18n="footer.deregister">Fahrzeug-Abmeldung</a>
                         </div>
                         <div class="links-list">
+                            <a href="{{ url_for('legal.about_us') }}" data-i18n="footer.about">Über uns</a>
                             <a href="{{ url_for('core.partner') }}" data-i18n="footer.partner">Partner</a>
                             <a href="{{ url_for('legal.data_privacy') }}" data-i18n="footer.privacy">Datenschutz</a>
                             <a href="{{ url_for('legal.imprint') }}" data-i18n="footer.imprint">Impressum</a>
